--- a/pages/docs/theme/index.mdx
+++ b/pages/docs/theme/index.mdx
@@ -16,7 +16,7 @@ export const getStaticProps = async ({ locale }) => {
   };
 };
 
-<PrevAndNext leftPath="/docs/guide" rightPath="/docs/components/button" />
+<PrevAndNext leftPath="/docs/guide/introduction" rightPath="/docs/components/button" />
 
 <div className="h-screen"></div>
 
