Directions were corrected

--- a/pages/docs/components/another.mdx
+++ b/pages/docs/components/another.mdx
@@ -28,8 +28,8 @@ export const getStaticProps = async ({ locale }) => {
 </SidebarLink>
 
 <PrevAndNext
-  leftPath="/docs/components/navbar"
-  rightPath="/docs/components/toast"
+  leftPath="/docs/components/tag-input"
+  rightPath="#!"
 />
 
 <div id="example-1"></div>
