--- a/pages/docs/components/tag-input.mdx
+++ b/pages/docs/components/tag-input.mdx
@@ -18,7 +18,7 @@ export const getStaticProps = async ({ locale }) => {
 };
 
 
-<PrevAndNext leftPath="/docs/components/card" rightPath="#!" />
+<PrevAndNext leftPath="/docs/components/card" rightPath="/docs/components/another" />
 
 
 <div className="h-screen"></div>
