--- a/pages/docs/components/tag-input.mdx
+++ b/pages/docs/components/tag-input.mdx
@@ -17,9 +17,10 @@ export const getStaticProps = async ({ locale }) => {
   };
 };
 
-
-<PrevAndNext leftPath="/docs/components/card" rightPath="/docs/components/another" />
-
+<PrevAndNext
+  leftPath="/docs/components/card"
+  rightPath="/docs/components/another"
+/>
 
 <div className="h-screen"></div>
 export default ({children}) => <NestedLayout
