--- a/pages/docs/components/another.mdx
+++ b/pages/docs/components/another.mdx
@@ -7,6 +7,7 @@ import { PrevAndNext } from '@/components/layout/PrevAndNext';
 import { SidebarLink } from '@/components/layout/SidebarLink';
 
 import { Example1 } from '@/components/docs/components/another/Example1';
+import { DropDown } from '@/components/docs/components/another/DropDown';
 
 export const meta = {
   name: 'Another UI',
@@ -25,14 +26,14 @@ export const getStaticProps = async ({ locale }) => {
   <a href="#example-1" className="text-right">
     Example 1
   </a>
+  <a href="#example-2" className="text-right">
+    Example 2
+  </a>
 </SidebarLink>
 
-<PrevAndNext
-  leftPath="/docs/components/tag-input"
-  rightPath="#!"
-/>
+<PrevAndNext leftPath="/docs/components/tag-input" rightPath="#!" />
 
-<div id="example-1"></div>
+<div id="example-1" />
 
 <ComponentExample name="Example 1 | Loading" paragraph="This is a paragraph">
   <Example1 />
@@ -71,6 +72,50 @@ export const Example1 = () => {
     </div>
   );
 };
+```
+</Code>
+
+<div id="example-2" />
+
+<ComponentExample name="Example 1 | DropDown" paragraph="This is a paragraph">
+  <DropDown />
+</ComponentExample>
+
+<Code>
+  ```jsx
+import React, { useState } from 'react';
+import { MdOutlineKeyboardArrowDown } from 'react-icons/md';
+
+export const DropDown = () => {
+  const [dropdown, setDropdown] = useState(false);
+  return (
+    <>
+      <div onClick={() => setDropdown(!dropdown)}>
+        <div className="p-3 bg-white dark:bg-darkSecondary shadow-lg rounded-xl flex items-center justify-between w-44 cursor-pointer">
+          <small>DropDown</small>
+          <MdOutlineKeyboardArrowDown
+            className={
+              dropdown ? 'rotate-180 duration-200' : 'rotate-0 duration-200'
+            }
+          />
+        </div>
+        <ul
+          className={
+            dropdown
+              ? 'flex my-1 items-center space-x-2 p-2 rounded-xl bg-white dark:bg-darkSecondary shadow-2xl w-fit'
+              : 'invisible inline-flex my-1 items-center space-x-2 p-2 rounded-xl bg-white dark:bg-darkSecondary shadow-2xl w-fit'
+          }>
+          <li>😍</li>
+          <li>😋</li>
+          <li>😡</li>
+          <li>😎</li>
+          <li>😭</li>
+          <li>😩</li>
+        </ul>
+      </div>
+    </>
+  );
+};
 
 ```
 </Code>
@@ -80,5 +125,9 @@ export default ({ children }) => (
     {children}
   </NestedLayout>
 );
+
+```
+
+```
 
 ```
