--- a/pages/docs/components/tooltip.mdx
+++ b/pages/docs/components/tooltip.mdx
@@ -1,7 +1,13 @@
 import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 
+import ComponentExample from '@/components/layout/ComponentExample';
+import { Code } from '@/components/layout/Code';
+import { SidebarLink } from '@/components/layout/SidebarLink';
 import { NestedLayout } from '@/components/layout/NestedLayout';
 import { PrevAndNext } from '@/components/layout/PrevAndNext';
+
+import { Default } from '@/components/docs/components/tooltip/Default';
+import { TypeA } from '@/components/docs/components/tooltip/TypeA';
 
 export const meta = {
   name: 'Tooltip',
@@ -16,13 +22,84 @@ export const getStaticProps = async ({ locale }) => {
   };
 };
 
-<PrevAndNext leftPath="/docs/components/avatar" rightPath="/docs/components/dialog" />
+<SidebarLink>
+  <a href="#default" className="text-right">
+    Default
+  </a>
+  <a href="#type-a" className="text-right">
+    Type A
+  </a>
+</SidebarLink>
 
-<div className="h-screen"></div>
+<PrevAndNext
+  leftPath="/docs/components/avatar"
+  rightPath="/docs/components/dialog"
+/>
+
+<div id="default" />
+
+<ComponentExample name="Default" paragraph="">
+  <Default />
+</ComponentExample>
+
+<Code>
+```jsx
+import React from 'react';
+
+export const Default = () => {
+  const button =
+    'w-fit mx-auto rounded-xl py-2 px-4 shadow-md text-sm duration-300 ease-in-out bg-blue-500 bg-opacity-30 hover:bg-opacity-50 md:text-sm text-[#1a5cff] ';
+
+return (
+<div className="relative flex flex-col items-center group">
+<button className={button}>Get tooltip</button>
+<div className="absolute bottom-4 hidden flex flex-col items-center mb-6 group-hover:flex">
+<span className="relative z-10 p-2 text-xs leading-none text-white whitespace-no-wrap bg-gray-600 shadow-lg rounded-md">
+This is tooltip
+</span>
+<div className="w-3 h-3 -mt-2 rotate-45 bg-gray-600"></div>
+</div>
+</div>
+);
+};
+
+````
+</Code>
+
+<div id="type-a" />
+
+<ComponentExample
+  name="Type A"
+  paragraph="">
+  <TypeA />
+</ComponentExample>
+
+<Code>
+```jsx
+import React from 'react';
+
+export const TypeA = () => {
+
+  return (
+    <div className="relative flex flex-col items-center group">
+      <div className="w-6 h-6 flex items-center justify-center border-2 border-gray-500 dark:border-white rounded-full">i</div>
+      <div className="absolute bottom-4 hidden flex flex-col items-center mb-6 group-hover:flex">
+        <span className="relative z-10 p-3 text-xs leading-none text-gray-600 dark:text-white whitespace-nowrap bg-white dark:bg-black shadow-lg rounded-lg space-y-1">
+          <h1 className='text-base font-medium'>This is tooltip</h1>
+          <p className='text-xs md:text-sm'>This is a tooltip paragraph</p>
+        </span>
+        <div className="w-3 h-3 -mt-2 rotate-45 bg-gray-200 dark:bg-black shadow-lg"></div>
+      </div>
+    </div>
+  );
+};
+
+````
+
+</Code>
 
 export default ({ children }) => (
   <NestedLayout name={meta.name} title={meta.title}>
     {children}
   </NestedLayout>
 );
-
