--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -105,7 +105,7 @@ return (
 ```jsx
 import React, { useState } from 'react';
 
-export const Default = () => {
+export const Border = () => {
   const [active, setActive] = useState(true);
 
   const button =
@@ -191,7 +191,7 @@ return (
 ```jsx
 import React, { useState } from 'react';
 
-export const Gradient = () => {
+export const Transparent = () => {
   const [active, setActive] = useState(true);
 
   const button =
