--- a/pages/docs/components/card.mdx
+++ b/pages/docs/components/card.mdx
@@ -117,7 +117,7 @@ import { BsHeartFill } from 'react-icons/bs';
 import { RiMessage3Fill } from 'react-icons/ri';
 import YourImage from './your-path/your-img.png';
 
-export const Default = () => {
+export const Commerce = () => {
   return (
     <>
       <div className="my-5 bg-white dark:bg-[#18191c] shadow-xl hover:shadow duration-200 rounded-xl">
@@ -346,7 +346,7 @@ export const TypeC = () => {
 ```jsx
 import React from 'react';
 
-export const TypeD = () => {
+export const TypeD  = () => {
   return (
     <>
       <div className="flex flex-col md:flex-row items-center space-x-4 p-2 md:p-3 rounded-xl shadow-lg bg-white">
