--- a/pages/docs/guide/introduction.mdx
+++ b/pages/docs/guide/introduction.mdx
@@ -3,7 +3,7 @@ import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 import { NestedLayout } from '@/components/layout/NestedLayout';
 import { PrevAndNext } from '@/components/layout/PrevAndNext';
 
-import { Introduction } from '@/components/docs//guide/Introduction'
+import { Introduction } from '@/components/docs//guide/Introduction';
 
 export const meta = {
   name: 'Introduction',
@@ -20,7 +20,6 @@ export const getStaticProps = async ({ locale }) => {
 
 <PrevAndNext leftPath="#!" rightPath="/docs/theme" />
 
-
 <Introduction />
 
 export default ({ children }) => (
@@ -28,4 +27,3 @@ export default ({ children }) => (
     {children}
   </NestedLayout>
 );
-
