--- a/pages/docs/components/toast.mdx
+++ b/pages/docs/components/toast.mdx
@@ -6,11 +6,13 @@ import { SidebarLink } from '@/components/layout/SidebarLink';
 import { NestedLayout } from '@/components/layout/NestedLayout';
 import { PrevAndNext } from '@/components/layout/PrevAndNext';
 
+import { Default } from '@/components/docs/components/toast/Default';
+import { Undo } from '@/components/docs/components/toast/Undo';
 import { Done } from '@/components/docs/components/toast/default1/Done';
 import { Error } from '@/components/docs/components/toast/default1/Error';
 import { Warning } from '@/components/docs/components/toast/default2/Warning';
 import { Warning2 } from '@/components/docs/components/toast/default2/Warning2';
-import { Glassmorphism } from '@/components/docs/components/toast/Glassmorphism';
+import { Glassphorism } from '@/components/docs/components/toast/Glassphorism';
 import { WithButton } from '@/components/docs/components/toast/WithButton';
 
 export const meta = {
@@ -27,20 +29,23 @@ export const getStaticProps = async ({ locale }) => {
 };
 
 <SidebarLink>
-  <a href="#default1" className="text-right">
-    Default A
+  <a href="#default" className="text-right">
+    Default
   </a>
-  <a href="#default2" className="text-right">
-    Default B
+  <a href="#type-a" className="text-right">
+    Type A
   </a>
-  <a href="#glassmorphism" className="text-right">
-    Glassmorphism
+  <a href="#type-b" className="text-right">
+    Type B
+  </a>
+  <a href="#glassphorism" className="text-right">
+    Glassphorism
   </a>
   <a href="#withButton" className="text-right">
     With button
   </a>
-  <a href="#iconWithButton" className="text-right">
-    With button
+  <a href="#Undo" className="text-right">
+    Undo
   </a>
 </SidebarLink>
 
@@ -49,10 +54,68 @@ export const getStaticProps = async ({ locale }) => {
   rightPath="/docs/components/card"
 />
 
-<div id="default1"></div>
+<div id="default"></div>
 
 <ComponentExample
-  name="Default A"
+  name="Default"
+  paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
+  <Default />
+</ComponentExample>
+
+<Code>
+```jsx
+import React from 'react';
+
+export const Default = () => {
+  return (
+    <>
+      <div
+        className="flex items-center w-[15rem] md:w-[20rem] p-4 text-gray-500 bg-white rounded-xl shadow dark:text-gray-400 dark:bg-[#18191c]"
+        role="alert">
+        <div className="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-blue-500 bg-blue-100 rounded-lg dark:bg-blue-800 dark:text-blue-200">
+          <svg
+            className="w-5 h-5"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              fill-rule="evenodd"
+              d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </div>
+        <div className="ml-3 text-sm font-normal">Set yourself free.</div>
+        <button
+          type="button"
+          className="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8 dark:text-gray-400 dark:bg-[#1e2023] dark:bg-opacity-70 dark:hover:bg-opacity-100"
+          data-dismiss-target="#toast-default"
+          aria-label="Close">
+          <span className="sr-only">Close</span>
+          <svg
+            className="w-5 h-5"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </button>
+      </div>
+
+    </>
+  );
+};
+
+````
+</Code>
+
+
+<div id="type-a"></div>
+
+<ComponentExample
+  name="Type A | Rectangle"
   paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
   <Done />
   <Error />
@@ -63,36 +126,39 @@ export const getStaticProps = async ({ locale }) => {
 import React from 'react';
 import { MdDone, MdClose } from 'react-icons/md';
 
-export const DefaultB = () => {
+export const Done = () => {
   return (
     <>
-      <div className="h-max w-[20rem] md:w-[25rem] p-2 border-2 border-green-400 bg-green-100 rounded-xl flex items-center justify-between">
+      <div className="h-max w-[15rem] md:w-[20rem] p-2 border-2 border-green-400 dark:border-opacity-50 
+        bg-green-100 dark:bg-[#223125] rounded-xl flex items-center justify-between">
         <div className="flex items-center">
-          <div className="flex items-center justify-center w-11 h-11 bg-green-500 rounded-2xl">
+          <div className="flex items-center justify-center w-10 h-10 bg-green-500 dark:bg-[#264027] rounded-2xl">
             <span className="flex items-center justify-center bg-white rounded-xl w-6 h-6">
               <span>
-                <MdDone className="text-green-500" />
+                <MdDone className="text-green-500 dark:text-[#3ea736]" />
               </span>
             </span>
           </div>
           <div>
-            <p className="text-primary pl-4">A success toast</p>
+            <p className="text-gray-700 dark:text-white pl-4">A success toast</p>
           </div>
         </div>
         <div>
-          <MdClose className="text-lg text-primary mr-4 cursor-pointer" />
+          <MdClose className="text-lg text-gray-700 dark:text-white mr-4 cursor-pointer hover:opacity-60" />
         </div>
       </div>
     </>
   );
 };
-```
+
+````
+
 </Code>
 
-<div id="default2"></div>
+<div id="type-b"></div>
 
 <ComponentExample
-  name="Default B"
+  name="Type B | Circle"
   paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
   <Warning />
   <Warning2 />
@@ -103,65 +169,115 @@ export const DefaultB = () => {
 import React from 'react';
 import { MdOutlineWarningAmber, MdClose } from 'react-icons/md';
 
-export const DefaultB = () => {
+export const Warning = () => {
   return (
     <>
-      <div className="h-max w-[20rem] md:w-[25rem] p-2 border-2 border-green-400 bg-green-100 rounded-full flex items-center justify-between">
+      <div className="h-max  w-[15rem] md:w-[20rem] p-2 border-2 border-yellow-400 dark:border-opacity-50 bg-yellow-100 
+        dark:bg-[#35301f] rounded-full flex items-center justify-between">
         <div className="flex items-center">
-          <div className="flex items-center justify-center w-11 h-11 bg-green-500 rounded-full">
+          <div className="flex items-center justify-center w-10 h-10 bg-yellow-500 dark:bg-[#836513] rounded-full">
             <span className="flex items-center justify-center bg-white rounded-full w-6 h-6">
               <span>
-                <MdOutlineWarningAmber className="text-green-500" />
+                <MdOutlineWarningAmber className="text-yellow-500 dark:text-[#b7ae01]" />
               </span>
             </span>
           </div>
           <div>
-            <p className="text-primary pl-4">A success toast</p>
+            <p className="text-gray-700 dark:text-white pl-4">A warning toast</p>
           </div>
         </div>
         <div>
-          <MdClose className="text-lg text-primary mr-4 cursor-pointer" />
+          <MdClose className="text-lg text-gray-700 dark:text-white mr-4 cursor-pointer hover:opacity-60" />
         </div>
       </div>
     </>
   );
 };
+
 ```
 </Code>
 
-<div id="glassmorphism"></div>
+<div id="undo" />
 
 <ComponentExample
-  name="Glassmorphism"
+  name="Undo"
   paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
-  <Glassmorphism />
+  <Undo />
 </ComponentExample>
 
 <Code>
 ```jsx
 import React from 'react';
-import { MdDone, MdClose } from 'react-icons/md';
 
-export const Glassmorphism = () => {
+export const Undo = () => {
   return (
     <>
-      <div className="relative z-20 flex items-center w-[20rem] md:w-[25erm] bg-white shadow-lg
-       p-5 rounded-xl bg-opacity-50 backdrop-filter backdrop-blur-sm">
-        <div className="flex items-center justify-center bg-green-200 rounded-xl w-6 h-6 mr-3 md:mr-5">
-          <span>
-            <MdDone className="text-green-500" />
-          </span>
-        </div>
-        <div>
-          <h4 className="font-semibold text-green-500">
-            Lazydev ui component
-          </h4>
-          <p className='text-xs md:text-sm'>A glassmorphism toast</p>
+      <div
+        className="flex items-center w-[15rem] md:w-[20rem] p-4 text-gray-500 bg-white rounded-xl shadow dark:text-gray-400 dark:bg-[#18191c]"
+        role="alert">
+        <div className="text-sm font-normal">Conversation archived.</div>
+        <div className="flex items-center ml-auto space-x-2">
+          <a
+            className="text-sm font-medium text-blue-600 p-1.5 hover:bg-blue-100 rounded-lg dark:text-blue-500 dark:hover:bg-gray-700"
+            href="#!">
+            Undo
+          </a>
+          <button
+            type="button"
+            className="bg-white text-gray-400 hover:text-gray-900 rounded-lg p-1.5 hover:bg-gray-100 inline-flex h-8 w-8 dark:text-gray-400 dark:bg-[#1e2023] dark:bg-opacity-70 dark:hover:bg-opacity-100">
+            <span className="sr-only">Close</span>
+            <svg
+              className="w-5 h-5"
+              fill="currentColor"
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                fill-rule="evenodd"
+                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                clip-rule="evenodd"></path>
+            </svg>
+          </button>
         </div>
       </div>
     </>
   );
 };
+
+````
+</Code>
+
+
+<div id="glassphorism"></div>
+
+<ComponentExample
+  name="Glassphorism"
+  paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
+  <Glassphorism />
+</ComponentExample>
+
+<Code>
+```jsx
+import React from 'react';
+import { MdDone } from 'react-icons/md';
+
+export const Glassphorism = () => {
+  return (
+    <>
+      <div className="relative z-20 flex items-center w-[15rem] md:w-[20rem] py-3 px-4 bg-white shadow-lg dark:bg-darkSecondary rounded-xl bg-opacity-50 backdrop-filter backdrop-blur-sm">
+        <div className="flex items-center justify-center bg-green-200 rounded-full h-8 w-8 mr-3 md:mr-5">
+          <span>
+            <MdDone className="text-green-500 text-lg" />
+          </span>
+        </div>
+        <div>
+          <h4 className="font-semibold text-green-500">Glassphorism toast</h4>
+          <p className="text-xs">Lazydev glassphorism toast ui</p>
+        </div>
+      </div>
+    </>
+  );
+};
+
 ```
 </Code>
 
@@ -176,32 +292,58 @@ export const Glassmorphism = () => {
 <Code>
 ```jsx
 import React from 'react';
-import { MdDone, MdClose } from 'react-icons/md';
 
 export const WithButton = () => {
+  const defaultButton =
+    'rounded-xl py-2 px-4 shadow-md text-sm duration-300 active:bg-opacity-80 ease-in-out bg-[#1a5cff] dark:bg-[#1a5cff] md:text-sm text-white hover:shadow-md hover:shadow-blue-500/50 ';
+
+  const buttonTransparent =
+    'rounded-xl py-2 px-4 shadow-md text-sm duration-300 whitespace-nowrap ease-in-out bg-blue-500 bg-opacity-30 md:text-sm text-[#1a5cff] ';
+
   return (
-    <div className='w-[20rem] md:w-[25rem] p-2 border-l-4 border-green-400 bg-white rounded-xl flex flex-col shadow-lg'>
-      <div className="flex items-center justify-between">
-        <div className="flex items-center">
-          <span className="flex items-center justify-center bg-green-300 rounded-xl w-6 h-6">
-            <span>
-              <MdDone className="text-white" />
-            </span>
+    <div className="w-[15rem] md:w-[20rem] p-4 text-gray-500 bg-white rounded-xl shadow dark:bg-[#18191c] dark:text-gray-400">
+      <div className="flex">
+        <div className="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-blue-500 bg-blue-100 rounded-lg dark:text-blue-300 dark:bg-blue-900">
+          <svg
+            className="w-5 h-5"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              fill-rule="evenodd"
+              d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </div>
+        <div className="ml-3 text-sm font-normal">
+          <span className="mb-1 text-sm font-semibold text-gray-900 dark:text-white">
+            Update available
           </span>
-          <div className="pl-4 ">
-            <h3 className="text-primary font-medium">
-              A success toast
-            </h3>
-            <p className="text-xs">Toast with button</p>
+          <div className="mb-2 text-sm font-normal">
+            A new software version is available for download.
+          </div>
+          <div className="flex items-center space-x-2">
+            <button className={defaultButton}>Update</button>
+            <button className={buttonTransparent}>Not now</button>
           </div>
         </div>
-        <div>
-          <MdClose className="text-lg text-primary mr-4 cursor-pointer" />
-        </div>
-      </div>
-      <div className='flex items-center space-x-2 w-fit ml-10 my-4'>
-          <button className='w-fit mx-auto py-2 px-4 shadow-lg text-sm duration-300 ease-in-out bg-gray-200 text-primary rounded-md'>Button</button>
-          <a className='text-sm text-gray-400 href="#!">Learn more</a>
+        <button
+          type="button"
+          className="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg p-1.5 hover:bg-gray-100 inline-flex h-8 w-8 dark:text-gray-400 dark:bg-[#1e2023] dark:bg-opacity-70 dark:hover:bg-opacity-100"
+          data-dismiss-target="#toast-interactive"
+          aria-label="Close">
+          <span className="sr-only">Close</span>
+          <svg
+            className="w-5 h-5"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </button>
       </div>
     </div>
   );
