Some components have been changed

--- a/pages/docs/components/toast.mdx
+++ b/pages/docs/components/toast.mdx
@@ -251,7 +251,9 @@ export const Undo = () => {
 
 <ComponentExample
   name="Glassphorism"
-  paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
+  paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing"
+  bgImage="bg-[url('https://t4.ftcdn.net/jpg/03/21/51/37/240_F_321513787_byq5eRPg6mXAm0vxfiBL9uNPKQPbHcXj.jpg')]"
+  >
   <Glassphorism />
 </ComponentExample>
 
