--- a/pages/docs/components/accordion.mdx
+++ b/pages/docs/components/accordion.mdx
@@ -9,8 +9,8 @@ import { SidebarLink } from '@/components/layout/SidebarLink';
 import { Default } from '@/components/docs/components/accordion/Default';
 
 export const meta = {
-  name: 'Accordion UI',
-  title: 'Accordion UI | Lazydev ui components',
+  name: 'Accordion',
+  title: 'Accordion | Lazydev ui components',
 };
 
 export const getStaticProps = async ({ locale }) => {
@@ -27,11 +27,15 @@ export const getStaticProps = async ({ locale }) => {
   </a>
 </SidebarLink>
 
-<PrevAndNext leftPath="/docs/components/tag-input" rightPath="#!" />
+<PrevAndNext leftPath="/docs/components/tag-input" rightPath="another" />
 
 <div id="default" />
 
-<ComponentExample name="Example 1 | Loading" paragraph="This is a paragraph">
+<ComponentExample
+  name="Accordion | Glassphorism"
+  paragraph="This is a paragraph"
+  bgImage="bg-[url('https://t4.ftcdn.net/jpg/03/21/51/37/240_F_321513787_byq5eRPg6mXAm0vxfiBL9uNPKQPbHcXj.jpg')]"
+  >
   <Default />
 </ComponentExample>
 
@@ -39,97 +43,17 @@ export const getStaticProps = async ({ locale }) => {
   ```jsx
 import React, { useRef, useState } from 'react';
 
-const StarIcon = () => (
-<svg
-  xmlns="http://www.w3.org/2000/svg"
-  class="h-6 w-6 text-yellow-500"
-  fill="none"
-  viewBox="0 0 24 24"
-  stroke="currentColor"
-  stroke-width="2">
-  <path
-    stroke-linecap="round"
-    stroke-linejoin="round"
-    d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
-  />
-</svg>
-);
-
-const BellIcon = () => (
-<svg
-  xmlns="http://www.w3.org/2000/svg"
-  className="h-6 w-6 text-blue-500"
-  fill="none"
-  viewBox="0 0 24 24"
-  stroke="currentColor"
-  strokeWidth={2}>
-  <path
-    strokeLinecap="round"
-    strokeLinejoin="round"
-    d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
-  />
-</svg>
-);
-
-const BookmarkIcon = () => (
-<svg
-  xmlns="http://www.w3.org/2000/svg"
-  className="h-6 w-6 text-gray-500"
-  fill="none"
-  viewBox="0 0 24 24"
-  stroke="currentColor"
-  strokeWidth={2}>
-  <path
-    strokeLinecap="round"
-    strokeLinejoin="round"
-    d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z"
-  />
-</svg>
-);
-
-const FilterIcon = () => (
-<svg
-  xmlns="http://www.w3.org/2000/svg"
-  className="h-6 w-6 text-purple-500"
-  fill="none"
-  viewBox="0 0 24 24"
-  stroke="currentColor"
-  strokeWidth={2}>
-  <path
-    strokeLinecap="round"
-    strokeLinejoin="round"
-    d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"
-  />
-</svg>
-);
-
-const HeartIcon = () => (
-<svg
-  xmlns="http://www.w3.org/2000/svg"
-  className="h-6 w-6 text-red-500"
-  fill="none"
-  viewBox="0 0 24 24"
-  stroke="currentColor"
-  strokeWidth={2}>
-  <path
-    strokeLinecap="round"
-    strokeLinejoin="round"
-    d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-  />
-</svg>
-);
-
 const Accordion = (props) => {
 const { Icon, title, paragraph, content, children } = props;
+
 const [active, setActive] = useState(false);
 const [height, setHeight] = useState('0px');
 const [rotate, setRotate] = useState('transform duration-700 ease');
 
 const contentSpace = useRef(null);
 
-function toggleAccordion() {
+const toggleAccordion = () => {
 setActive((prevState) => !prevState);
-// @ts-ignore
 setHeight(active ? '0px' : `${contentSpace.current.scrollHeight}px`);
 setRotate(
 active
@@ -137,9 +61,10 @@ active
 : 'transform duration-700 ease rotate-180'
 );
 }
+
 return (
 
-<div>
+<>
   <div className="border-b border-blue-400 pb-1">
     <div
       className={`${
@@ -171,7 +96,7 @@ return (
       {children}
     </div>
   </div>
-</div>
+</>
 ); };
 
 export const Default = () => {
@@ -183,18 +108,18 @@ export const Default = () => {
         title="Connected devices"
         paragraph="Two issues to fix right now"
         content="Lorem ipsum, dolor sit amet consectetur"
-        Icon={<BellIcon />}
+        Icon={"Use your Icon here!"}
       />
       <Accordion
         title="Started Items"
         paragraph="Bookmarked for the future"
         content="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus dolorum, consequuntur quam repudiandae facere deleniti"
-        Icon={<StarIcon />}
+        Icon={"Use your Icon here!"}
       />
       <Accordion
         title="Statement Expended"
         paragraph="Purchase our design kits"
-        Icon={<HeartIcon />}>
+        Icon={"Use your Icon here!"}>
         <div className="py-2 px-4 bg-blue-100 w-full rounded-lg">
           <div className="flex items-center">
             <h3 className="font-semibold text-gray-800">
@@ -270,18 +195,17 @@ export const Default = () => {
         title="Connected devices"
         paragraph="Two issues to fix right now"
         content="Lorem ipsum, dolor sit amet consectetur"
-        Icon={<BookmarkIcon />}
+        Icon={"Use your Icon here!"}
       />
       <Accordion
         title="Connected devices"
         paragraph="Two issues to fix right now"
         content="Lorem ipsum, dolor sit amet consectetur"
-        Icon={<FilterIcon />}
+        Icon={"Use your Icon here!"}
       />
     </div>
   );
 };
-
 ```
 </Code>
 
