change: button code and fix som issue

--- a/pages/docs/components/toast.mdx
+++ b/pages/docs/components/toast.mdx
@@ -79,9 +79,9 @@ export const Default = () => {
             viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg">
             <path
-              fill-rule="evenodd"
+              clipRule="evenodd"
               d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z"
-              clip-rule="evenodd"></path>
+              clipRule="evenodd"></path>
           </svg>
         </div>
         <div className="ml-3 text-sm font-normal">Set yourself free.</div>
@@ -97,15 +97,16 @@ export const Default = () => {
             viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg">
             <path
-              fill-rule="evenodd"
+              clipRule="evenodd"
               d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-              clip-rule="evenodd"></path>
+              clipRule="evenodd"></path>
           </svg>
         </button>
       </div>
 
     </>
-  );
+
+);
 };
 
 ````
@@ -129,7 +130,7 @@ import { MdDone, MdClose } from 'react-icons/md';
 export const Done = () => {
   return (
     <>
-      <div className="h-max w-[15rem] md:w-[20rem] p-2 border-2 border-green-400 dark:border-opacity-50 
+      <div className="h-max w-[15rem] md:w-[20rem] p-2 border-2 border-green-400 dark:border-opacity-50
         bg-green-100 dark:bg-[#223125] rounded-xl flex items-center justify-between">
         <div className="flex items-center">
           <div className="flex items-center justify-center w-10 h-10 bg-green-500 dark:bg-[#264027] rounded-2xl">
@@ -172,7 +173,8 @@ import { MdOutlineWarningAmber, MdClose } from 'react-icons/md';
 export const Warning = () => {
   return (
     <>
-      <div className="h-max  w-[15rem] md:w-[20rem] p-2 border-2 border-yellow-400 dark:border-opacity-50 bg-yellow-100 
+      <div
+        className="h-max  w-[15rem] md:w-[20rem] p-2 border-2 border-yellow-400 dark:border-opacity-50 bg-yellow-100 
         dark:bg-[#35301f] rounded-full flex items-center justify-between">
         <div className="flex items-center">
           <div className="flex items-center justify-center w-10 h-10 bg-yellow-500 dark:bg-[#836513] rounded-full">
@@ -183,7 +185,9 @@ export const Warning = () => {
             </span>
           </div>
           <div>
-            <p className="text-gray-700 dark:text-white pl-4">A warning toast</p>
+            <p className="text-gray-700 dark:text-white pl-4">
+              A warning toast
+            </p>
           </div>
         </div>
         <div>
@@ -194,7 +198,7 @@ export const Warning = () => {
   );
 };
 
-```
+````
 </Code>
 
 <div id="undo" />
@@ -232,9 +236,9 @@ export const Undo = () => {
               viewBox="0 0 20 20"
               xmlns="http://www.w3.org/2000/svg">
               <path
-                fill-rule="evenodd"
+                clipRule="evenodd"
                 d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                clip-rule="evenodd"></path>
+                clipRule="evenodd"></path>
             </svg>
           </button>
         </div>
@@ -244,16 +248,15 @@ export const Undo = () => {
 };
 
 ````
-</Code>
 
+</Code>
 
 <div id="glassphorism"></div>
 
 <ComponentExample
   name="Glassphorism"
   paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing"
-  bgImage="bg-[url('https://t4.ftcdn.net/jpg/03/21/51/37/240_F_321513787_byq5eRPg6mXAm0vxfiBL9uNPKQPbHcXj.jpg')]"
-  >
+  bgImage="bg-[url('https://t4.ftcdn.net/jpg/03/21/51/37/240_F_321513787_byq5eRPg6mXAm0vxfiBL9uNPKQPbHcXj.jpg')]">
   <Glassphorism />
 </ComponentExample>
 
@@ -280,7 +283,7 @@ export const Glassphorism = () => {
   );
 };
 
-```
+````
 </Code>
 
 <div id="withButton"></div>
@@ -312,9 +315,9 @@ export const WithButton = () => {
             viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg">
             <path
-              fill-rule="evenodd"
+              clipRule="evenodd"
               d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
-              clip-rule="evenodd"></path>
+              clipRule="evenodd"></path>
           </svg>
         </div>
         <div className="ml-3 text-sm font-normal">
@@ -341,9 +344,9 @@ export const WithButton = () => {
             viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg">
             <path
-              fill-rule="evenodd"
+              clipRule="evenodd"
               d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-              clip-rule="evenodd"></path>
+              clipRule="evenodd"></path>
           </svg>
         </button>
       </div>
@@ -351,7 +354,8 @@ export const WithButton = () => {
   );
 };
 
-```
+````
+
 </Code>
 
 export default ({ children }) => (
