--- a/pages/docs/components/another.mdx
+++ b/pages/docs/components/another.mdx
@@ -46,26 +46,26 @@ import React from 'react';
 export const Example1 = () => {
   return (
     <div className="space-y-2 md:scroll-py-4">
-      <div class="overflow-hidden relative max-w-md mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6">
+      <div className="overflow-hidden relative max-w-md mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6">
         <img
-          class="absolute -left-6 w-28 h-28 rounded-full shadow-lg"
+          className="absolute -left-6 w-28 h-28 rounded-full shadow-lg"
           src="your-image-path"
         />
-        <div class="min-w-0 py-5 pl-28 pr-5">
-          <div class="text-slate-900 font-medium text-sm sm:text-base truncate">
+        <div className="min-w-0 py-5 pl-28 pr-5">
+          <div className="text-slate-900 font-medium text-sm sm:text-base truncate">
             Andrew Alfred
           </div>
-          <div class="text-slate-500 font-medium text-sm sm:text-base leading-tight truncate">
+          <div className="text-slate-500 font-medium text-sm sm:text-base leading-tight truncate">
             Assistant to the Traveling Secretary
           </div>
         </div>
       </div>
-      <div class="overflow-hidden relative bg-white dark:bg-darkSecondary shadow-lg rounded-xl p-4 max-w-sm w-full mx-auto">
-        <div class="animate-pulse flex space-x-4">
-          <div class="bg-slate-400 absolute -top-6 -left-6 w-28 h-28 rounded-full shadow-lg"></div>
-          <div class="flex-1 space-y-5 py-1 pl-20">
-            <div class="h-2 bg-slate-400 rounded w-[50%]" />
-            <div class="h-2 bg-slate-400 rounded" />
+      <div className="overflow-hidden relative bg-white dark:bg-darkSecondary shadow-lg rounded-xl p-4 max-w-sm w-full mx-auto">
+        <div className="animate-pulse flex space-x-4">
+          <div className="bg-slate-400 absolute -top-6 -left-6 w-28 h-28 rounded-full shadow-lg"></div>
+          <div className="flex-1 space-y-5 py-1 pl-20">
+            <div className="h-2 bg-slate-400 rounded w-[50%]" />
+            <div className="h-2 bg-slate-400 rounded" />
           </div>
         </div>
       </div>
