--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -9,6 +9,8 @@ import { SidebarLink } from '@/components/layout/SidebarLink';
 import { Default } from '@/components/docs/components/button/Default';
 import { Border } from '@/components/docs/components/button/Border';
 import { Transparent } from '@/components/docs/components/button/Transparent';
+import { Gradient } from '@/components/docs/components/button/Gradient';
+import { Loading } from '@/components/docs/components/button/Loading';
 
 export const meta = {
   name: 'Button',
@@ -27,130 +29,125 @@ export const getStaticProps = async ({ locale }) => {
   <a href="#default" className="sidebar__link">
     Default
   </a>
+  <a href="#border" className="sidebar__link">
+    Border
+  </a>
+  <a href="#transparent" className="sidebar__link">
+    Transparent
+  </a>
+  <a href="#gradient" className="sidebar__link">
+    Gradient
+  </a>
+  <a href="#loading" className="sidebar__link">
+    Loading
+  </a>
 </SidebarLink>
 
 <PrevAndNext leftPath="/docs/theme" rightPath="/docs/components/alert" />
 
 <div id="default" />
 
-<ComponentExample name="Default" paragraph="This is a paragraph">
+<ComponentExample name="Default" paragraph="Default button component">
   <Default />
 </ComponentExample>
 
 <Code>
-```jsx
-import React, { useState } from 'react';
-
-export const Default = () => {
-  const [active, setActive] = useState(true);
-
-  return (
-    <div className="flex items-center space-x-3">
-      <a
-        onClick={() => setActive(true)}
-        className={`${
-          active ? '-translate-y-1' : ''
-        } w-fit mx-auto rounded-lg py-2 px-8 font-medium shadow-md text-sm duration-300
-          active:bg-opacity-80 cursor-pointer ease-in-out active:scale-95 bg-[#1a5cff] 
-          dark:bg-[#1a5cff] md:text-sm text-white hover:shadow-md`}>
-        Active
-      </a>
-      <a
-        onClick={() => setActive(false)}
-        className={`${
-          active ? '' : '-translate-y-1'
-        } w-fit mx-auto rounded-lg py-2 px-8 font-medium shadow-md text-sm duration-300
-          active:bg-opacity-80 cursor-pointer ease-in-out active:scale-95 bg-[#1a5cff] 
-          dark:bg-[#1a5cff] md:text-sm text-white hover:shadow-md`}>
-        Default
-      </a>
-    </div>
-  );
-};
-
-
-````
+  ```jsx
+  <button
+    className="w-fit rounded-lg py-2 px-8 cursor-pointer active:scale-95
+        shadow-md text-xs duration-300 bg-[#1a5cff] active:bg-opacity-80
+        ease-in-out bg-transparent font-medium md:text-sm text-white">
+    Default
+  </button>
+  ````
 </Code>
 
 <div id="border" />
 
-<ComponentExample name="Border" paragraph="This is a paragraph">
+<ComponentExample name="Border" paragraph="Border button component">
   <Border />
 </ComponentExample>
 
 <Code>
 ```jsx
-import React, { useState } from 'react';
-
-export const Border = () => {
-  const [active, setActive] = useState(true);
-
-  return (
-    <div className="flex items-center space-x-3">
-      <a
-        onClick={() => setActive(true)}
-        className={`${
-          active ? 'bg-[#1a5cff] text-white' : ''
-        } w-fit mx-auto rounded-lg py-2 px-8 cursor-pointer active:scale-95
-        shadow-md text-sm duration-300 border border-[#1a5cff] active:bg-opacity-80
-        ease-in-out bg-transparent md:text-sm text-[#1a5cff]`}>
+  <div className="flex items-center space-x-3">
+    <button
+        className="w-fit rounded-lg py-2 px-8 active:scale-95
+      shadow-md text-sm duration-300 bg-[#1a5cff] active:bg-opacity-80
+      ease-in-out bg-transparent font-medium md:text-sm text-white hover:bg-transparent border border-[#1a5cff] hover:text-[#1a5cff]">
         Active
-      </a>
-      <a
-        onClick={() => setActive(false)}
-        className={`${
-          active ? '' : 'bg-[#1a5cff] text-white'
-        } w-fit mx-auto rounded-lg py-2 px-8 cursor-pointer active:scale-95
-        shadow-md text-sm duration-300 border border-[#1a5cff] active:bg-opacity-80
-        ease-in-out bg-transparent md:text-sm text-[#1a5cff]`}>
-        Default
-      </a>
-    </div>
-  );
-};
+    </button>
+    <button
+        className="w-fit rounded-lg py-2 px-8 active:scale-95
+    shadow-md text-sm duration-300 border border-[#1a5cff] active:bg-opacity-80
+    ease-in-out bg-transparent font-medium md:text-sm text-[#1a5cff] hover:bg-[#1a5cff] hover:text-white">
+        Border
+    </button>
+  </div>
 ````
 
 </Code>
 
-
 <div id="transparent" />
 
-<ComponentExample name="Transparent" paragraph="This is a paragraph">
+<ComponentExample name="Transparent" paragraph="Transparent button component">
   <Transparent />
 </ComponentExample>
 
 <Code>
-```jsx
-import React, { useState } from 'react';
+  ```jsx
+  <div className="flex items-center space-x-3">
+    <a className="w-fit bg-blue-500 bg-opacity-30 rounded-lg py-2 px-8 cursor-pointer font-medium active:scale-95 shadow-md text-sm duration-300 ease-in-out hover:bg-blue-500 hover:bg-opacity-30 md:text-sm text-[#1a5cff] hover:bg-transparent">
+      Active
+    </a>
+    <a className="w-fit hover:bg-blue-500 hover:bg-opacity-30 rounded-lg py-2 px-8 cursor-pointer font-medium active:scale-95 shadow-md text-sm duration-300 ease-in-out  md:text-sm text-[#1a5cff] bg-transparent">
+      Transparent
+    </a>
+  </div>
+  ```
+</Code>
 
-export const Transparent = () => {
-  const [active, setActive] = useState(true);
+<div id="gradient" />
 
-  return (
-    <div className="flex items-center space-x-3">
-      <a
-        onClick={() => setActive(true)}
-        className={`${
-          active ? 'bg-blue-500 bg-opacity-30' : ''
-        } w-fit mx-auto rounded-lg py-2 px-8 cursor-pointer active:scale-95
-          shadow-md text-sm duration-300 ease-in-out hover:bg-blue-500 hover:bg-opacity-30
-          md:text-sm text-[#1a5cff]`}>
-        Active
-      </a>
-      <a
-        onClick={() => setActive(false)}
-        className={`${
-          active ? '' : 'bg-blue-500 bg-opacity-30'
-        } w-fit mx-auto rounded-lg py-2 px-8 cursor-pointer active:scale-95
-          shadow-md text-sm duration-300 ease-in-out hover:bg-blue-500 hover:bg-opacity-30
-          md:text-sm text-[#1a5cff]`}>
-        Default
-      </a>
-    </div>
-  );
-};
-````
+<ComponentExample name="Gradient" paragraph="Gradient button component">
+  <Gradient />
+</ComponentExample>
 
+<Code>
+  ```jsx
+  <div className="flex items-center space-x-3">
+    <button className="text-white bg-gradient-to-br from-[#009FFD] to-[#2A2A72] hover:bg-gradient-to-bl font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb- active:scale-95 duration-300">
+        Gradient
+    </button>
+
+    <button className="relative inline-flex items-center justify-center p-0.5 mb-0 mr-2 overflow-hidden text-sm font-medium text-[#1a5cff]     rounded-lg group bg-gradient-to-br from-[#009FFD] to-[#2A2A72] hover:text-white active:scale-95 duration-300">
+      <span className="relative px-5 py-2 transition-all ease-in duration-200 bg-white rounded-md group-hover:bg-opacity-0">
+          Gradient
+      </span>
+    </button>
+  </div>
+```
+</Code>
+
+<div id="loading" />
+
+<ComponentExample name="Loading" paragraph="Loading button component">
+  <Loading />
+</ComponentExample>
+
+<Code>
+  ```jsx
+ <div className="flex items-center space-x-3">
+    <button className="w-fit flex items-center space-x-2 mx-auto rounded-lg py-2 px-4 shadow-md text-sm active:bg-opacity-80 ease-in-out bg-[#1a5cff] dark:bg-[#1a5cff] md:text-sm active:scale-95 duration-200 text-white hover:shadow-md hover:shadow-blue-500/50">
+      <div className="border-t-transparent w-[12px] h-[12px] border-[2px] border-white rounded-full animate-spin" />
+      <p>Loading A</p>
+    </button>
+    <button className="w-fit flex items-center space-x-2 mx-auto rounded-lg py-2 px-4 shadow-md text-sm active:bg-opacity-80 ease-in-out bg-[#1a5cff] dark:bg-[#1a5cff] md:text-sm active:scale-95 duration-200 text-white hover:shadow-md hover:shadow-blue-500/50">
+      <div className="border-t-transparent w-[12px] h-[12px] border-[2px] border-white border-dotted rounded-full animate-spin" />
+      <p>Loading B</p>
+    </button>
+  </div>
+```
 </Code>
 
 export default ({ children }) => (
